<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cellRoomTicketHistoryCard"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true"
    android:longClickable="true"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="10dp"
    app:cardUseCompatPadding="true"
    app:rippleColor="#9CB888">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/cellRoomTicketServiceName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="6dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/cell_room_ticket_title_txt"
            android:textColor="@color/medium_theme_green"
            android:textSize="22sp" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/cellRoomTicketDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="12dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/cell_room_ticket_body_txt"
            android:textColor="#7F7F7F"
            android:textSize="14sp" />


        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:paddingEnd="10dp"
            android:text="@string/cell_room_ticket_status_lbl"
            android:textColor="@color/medium_theme_green"
            android:textSize="12sp"
            tools:ignore="RtlSymmetry" />

        <ImageView
            android:id="@+id/cellRoomTicketStatus"
            android:layout_width="300dp"
            android:layout_height="10dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:src="@drawable/status_submitted_bar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:orientation="horizontal"
            android:paddingStart="10dp"
            tools:ignore="RtlSymmetry">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="90dp"
                android:fontFamily="@font/harmattan"
                android:text="@string/cell_room_ticket_raised_lbl"
                android:textColor="#7F7F7F"
                android:textSize="12sp" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="100dp"
                android:fontFamily="@font/harmattan"
                android:text="@string/cell_room_ticket_in_review_lbl"
                android:textColor="#7F7F7F"
                android:textSize="12sp" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/harmattan"
                android:text="@string/cell_room_ticket_solved_lbl"
                android:textColor="#7F7F7F"
                android:textSize="12sp" />


        </LinearLayout>


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/cellRoomTicketRaisedOn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/cell_room_ticket_raised_on_txt"
            android:textColor="#7F7F7F"
            android:textSize="10sp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/cellRoomTicketRaisedBy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="2dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/cell_room_ticket_raised_by_txt"
            android:textColor="#7F7F7F"
            android:textSize="10sp" />


    </LinearLayout>
</com.google.android.material.card.MaterialCardView>