<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_fill_colour"
    android:orientation="vertical"
    android:paddingStart="20dp"
    android:paddingEnd="20dp"
    tools:context=".DeleteAccountFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="4dp">

        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/bin_icon" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:fontFamily="@font/harmattan"
            android:padding="4dp"
            android:text="@string/delete_pge_main_lbl"
            android:textColor="@color/medium_theme_green"
            android:textSize="36sp"
            android:textStyle="bold" />

    </LinearLayout>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="30dp"
        android:fontFamily="sans-serif-medium"
        android:lineSpacingExtra="4sp"
        android:padding="4dp"
        android:text="@string/delete_pge_sec_lbl"
        android:textColor="@color/medium_theme_green"
        android:textSize="16sp" />


    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:fontFamily="sans-serif-medium"
        android:padding="4dp"
        android:text="@string/delete_pge_note_lbl"
        android:textColor="#E6A4A4A4"
        android:textSize="14sp" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif"
        android:padding="4dp"
        android:text="@string/delete_pge_prompt_lbl"
        android:textColor="#E6A4A4A4"

        android:textSize="16sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/deleteAccountET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@android:color/holo_red_light"
        android:hint="@string/delete_pge_prompt_delete_hint"
        android:inputType="text"
        android:maxLength="6"
        android:textColor="#E6626161"
        android:textColorHint="#E6626161" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="end|center_vertical"
        android:orientation="horizontal">

        <ProgressBar
            android:id="@+id/deleteAccountProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:visibility="invisible" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/deleteAccountAbortBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/delete_pge_prompt_abort_txt"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/deleteAccountDeleteBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/holo_red_light"
            android:text="@string/delete_pge_prompt_delete_txt"
            android:textColor="@color/white"
            android:textSize="12sp" />

    </LinearLayout>


</LinearLayout>