<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_fill_colour"
    android:fadeScrollbars="false"
    android:orientation="vertical"
    android:paddingTop="20dp"
    android:paddingBottom="20dp"
    android:scrollIndicators="right"
    android:scrollbarFadeDuration="0"
    android:scrollbarSize="4dp"
    android:id="@+id/viewUserProfileFragment"
    android:scrollbarThumbVertical="@android:color/darker_gray"
    android:scrollbars="vertical"
    android:verticalScrollbarPosition="right"
    tools:context=".fragments.ViewUserProfileFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_fill_colour"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:paddingTop="58dp"
            android:paddingEnd="12dp"
            android:paddingBottom="12dp"
            tools:ignore="RtlSymmetry">

            <ImageView
                android:id="@+id/viewUserProfilePgeAvatar"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="6dp"
                android:elevation="2dp"
                android:padding="2dp"
                android:src="@drawable/av_100"
                app:elevation="2dp">

            </ImageView>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="14dp"
                android:paddingTop="32dp"
                android:paddingEnd="14dp"
                android:paddingBottom="32dp">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_profile_pge_user_type_lbl"
                    android:textColor="#E6626161" />


                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/viewUserProfilePgeUserTypeTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:text="@string/user_profile_pge_user_type_txt"
                    android:textColor="#E6626161"
                    android:textSize="20sp">

                </com.google.android.material.textview.MaterialTextView>

            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingStart="40dp"
            android:paddingTop="20dp"
            android:paddingEnd="40dp"
            android:paddingBottom="24dp">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/duru_sans"
                android:padding="2dp"
                android:text="@string/user_profile_pge_username_lbl"
                android:textColor="#E6626161" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/viewUserProfilePgeUsernameTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:padding="2dp"
                android:text="@string/user_profile_pge_username_txt"
                android:textColor="#E6626161"
                android:textSize="14sp">

            </com.google.android.material.textview.MaterialTextView>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_gravity="center_horizontal"
                android:background="@android:color/darker_gray" />


            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:fontFamily="@font/duru_sans"
                android:padding="2dp"
                android:text="@string/user_profile_pge_user_mail_id_lbl"
                android:textColor="#E6626161" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/viewUserProfilePgeUserMailIdTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:padding="2dp"
                android:text="@string/user_profile_pge_user_mail_id_txt"
                android:textColor="#E6626161"
                android:textSize="14sp">

            </com.google.android.material.textview.MaterialTextView>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_gravity="center_horizontal"
                android:background="@android:color/darker_gray" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:fontFamily="@font/duru_sans"
                android:padding="2dp"
                android:text="@string/user_profile_pge_register_number_lbl"
                android:textColor="#E6626161" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/viewUserProfilePgeRegisterNumberTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:padding="2dp"
                android:text="@string/user_profile_pge_register_number_txt"
                android:textColor="#E6626161"
                android:textSize="14sp">

            </com.google.android.material.textview.MaterialTextView>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_gravity="center_horizontal"
                android:background="@android:color/darker_gray" />


            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:fontFamily="@font/duru_sans"
                android:padding="2dp"
                android:text="@string/user_profile_pge_contact_number_lbl"
                android:textColor="#E6626161" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/viewUserProfilePgeContactNumberTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:padding="2dp"
                android:text="@string/user_profile_pge_contact_num_txt"
                android:textColor="#E6626161"
                android:textSize="14sp">

            </com.google.android.material.textview.MaterialTextView>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_gravity="center_horizontal"
                android:background="@android:color/darker_gray" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:fontFamily="@font/duru_sans"
                android:padding="2dp"
                android:text="@string/user_profile_pge_native_language_lbl"
                android:textColor="#E6626161" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/viewUserProfilePgeNativeLanguageTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:padding="2dp"
                android:text="@string/user_profile_pge_native_language_txt"
                android:textColor="#E6626161"
                android:textSize="14sp">

            </com.google.android.material.textview.MaterialTextView>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_gravity="center_horizontal"
                android:background="@android:color/darker_gray" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:fontFamily="@font/duru_sans"
                android:padding="2dp"
                android:text="@string/user_profile_pge_branch_lbl"
                android:textColor="#E6626161" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/viewUserProfilePgeBranchTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:padding="2dp"
                android:text="@string/user_profile_pge_branch_txt"
                android:textColor="#E6626161"
                android:textSize="14sp">

            </com.google.android.material.textview.MaterialTextView>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_gravity="center_horizontal"
                android:background="@android:color/darker_gray" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="38dp"
                android:gravity="center_horizontal|center_vertical"
                android:orientation="horizontal"
                android:padding="10dp">


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/viewUserProfilePgeEdit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:backgroundTint="@color/white"
                    android:padding="12dp"
                    android:text="@string/user_profile_pge_edit_lbl"
                    android:textAllCaps="false"
                    android:textColor="@color/medium_theme_green"
                    android:textSize="16sp"
                    app:cornerRadius="50dp"
                    app:icon="@drawable/ic_baseline_edit_24"
                    app:iconTint="@color/medium_theme_green"
                    app:rippleColor="#DADADA" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/viewUserProfilePgeCloseAccount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/light_theme_green"
                    android:padding="14dp"
                    android:text="@string/user_profile_pge_close_account_lbl"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    app:cornerRadius="50dp" />


            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>